--- a/shoppingApp/package.json
+++ b/shoppingApp/package.json
@@ -23,6 +23,7 @@
         "@ionic-native/app-rate": "^4.3.2",
         "@ionic-native/core": "^4.3.2",
         "@ionic-native/native-storage": "^4.3.2",
+        "@ionic-native/network": "^4.3.3",
         "@ionic-native/splash-screen": "^4.3.2",
         "@ionic-native/status-bar": "^4.3.2",
         "@ionic-native/stripe": "^4.3.2",
@@ -45,6 +46,7 @@
         "cordova-plugin-globalization": "^1.0.7",
         "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-nativestorage": "^2.2.2",
+        "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-stripe": "^1.5.3",
@@ -70,13 +72,11 @@
         "xoauth2": "^1.2.0",
         "y": "^0.3.2",
         "zone.js": "^0.8.18"
-
-        
     },
     "devDependencies": {
         "@angular/language-service": "^4.4.6",
         "@ionic/app-scripts": "^2.1.4",
-        "ionic": "^3.15.2",
+        "ionic": "3.16.0",
         "typescript": "^2.5.3"
     },
     "description": "An Ionic project",
@@ -91,7 +91,8 @@
             "ionic-plugin-keyboard": {},
             "cordova-plugin-nativestorage": {},
             "cordova-plugin-stripe": {},
-            "cordova-plugin-youtube-video-player": {}
+            "cordova-plugin-youtube-video-player": {},
+            "cordova-plugin-network-information": {}
         },
         "platforms": [
             "android"
